--- a/Kyle_Web2/scss/sections/_footpath.scss
+++ b/Kyle_Web2/scss/sections/_footpath.scss
@@ -7,6 +7,10 @@ h1{
   color: $green;
   text-align: center;
   margin-bottom: 30px;
+
+  @include lg{
+    font-size: 30px;
+  }
 }
 
 p{
@@ -14,6 +18,10 @@ p{
   text-align: justify;
   padding-right: 30px;
   padding-left: 15px;
+
+  @include lg{
+    font-size: 21px;
+  }
 }
 
 
@@ -21,11 +29,23 @@ p{
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 
+@include md{
+  display: block;
+
+}
+
 .footpathimages{
   grid-column: 1/2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+@include md{
+  flex-direction: row;
+  padding: 0 35px;
+  margin-bottom: 30px;
+}
+
 
 }
 
