--- a/Kyle_Web2/scss/sections/_gallery.scss
+++ b/Kyle_Web2/scss/sections/_gallery.scss
@@ -8,10 +8,42 @@
         grid-row-gap: 30px;
         grid-column-gap: 10px;
 
+        @include sm{
+          display: grid;
+        grid-template-rows: repeat(7, 242px);
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 30px;
+        grid-column-gap: 10px;
+        width: 100%;
+        }
+
+
+        @include md{
+          display: grid;
+        grid-template-rows: repeat(4, 363px);
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 30px;
+        grid-column-gap: 10px;
+        width: 100%;
+        }
+
+        @include lg{
+          display: grid;
+        grid-template-rows: repeat(3, 363px);
+        grid-template-columns: repeat(3, 1fr);
+        grid-row-gap: 30px;
+        grid-column-gap: 10px;
+        width: 100%;
+        }
+
 li{
   background-size: cover;
   height: 100%;
   width: 100%;
+
+
+
+
   &:nth-child(1){
     grid-row: span 2;
     grid-column: span 2;
@@ -37,14 +69,82 @@ li{
   grid-column: span 2;
   background-image: url("../img/gallery/gall5.jpg");
 }
+
+@include md{
+
+  &:nth-child(1){
+    grid-row: span 2;
+    grid-column: span 2;
+    background-image: url("../img/gallery/gall1.jpg");
+  }
+  &:nth-child(2){
+    grid-row: span 1;
+    grid-column: span 1;
+    background-image: url("../img/gallery/gall2.jpg");
+  }
+  &:nth-child(3){
+    grid-row: span 1;
+    grid-column: span 1;
+    background-image: url("../img/gallery/gall3.jpg");
+  }
+  &:nth-child(4){
+    grid-row: span 1;
+    grid-column: span 1;
+    background-image: url("../img/gallery/gall4.jpg");
+  }
+  &:nth-child(5){
+  grid-row: span 1;
+  grid-column: span 1;
+  background-image: url("../img/gallery/gall5.jpg");
+
+}
+
+
+
+}
+
+@include lg{
+
+  &:nth-child(1){
+    grid-row: span 2;
+    grid-column: span 2;
+    background-image: url("../img/gallery/gall1.jpg");
+    background-position: -100px;
+  }
+  &:nth-child(2){
+    grid-row: span 1;
+    grid-column: span 1;
+    background-image: url("../img/gallery/gall2.jpg");
+    background-position: -50px;
+  }
+  &:nth-child(3){
+    grid-row: span 1;
+    grid-column: span 1;
+    background-image: url("../img/gallery/gall3.jpg");
+
+  }
+  &:nth-child(4){
+    grid-row: span 1;
+    grid-column: span 1.5;
+    background-image: url("../img/gallery/gall4.jpg");
+  }
+  &:nth-child(5){
+  grid-row: span 1;
+  grid-column: span 1;
+  background-image: url("../img/gallery/gall5.jpg");
+
+}
+&:nth-child(6){
+grid-row: span 1;
+grid-column: span 1;
+background-image: url("../img/gallery/gall6.jpg");
+
+}
 }
 
 
 
 
 
-
-
-
 }
-}
+}}
