--- a/Kyle_Web2/scss/sections/_gallhero.scss
+++ b/Kyle_Web2/scss/sections/_gallhero.scss
@@ -8,11 +8,19 @@
     width: 100%;
     margin-bottom: 30px;
 
+@include md{
+  height: 220px;
+}
 
     h1{
       font-size: 21px;
       text-align: center;
       color: $white;
       margin-top: 20px;
+
+      @include md{
+        font-size: 30px;
+        padding-top: 25px;
+      }
     }
 }
