--- a/Kyle_Web2/css/styles.css
+++ b/Kyle_Web2/css/styles.css
@@ -409,6 +409,9 @@ footer {
   @media (min-width: 960px) {
     #hero {
       height: 750px; } }
+  @media (min-width: 1125px) {
+    #hero {
+      height: 850px; } }
   #hero #h1hero {
     display: flex;
     flex-direction: column;
@@ -423,6 +426,9 @@ footer {
       @media (min-width: 710px) {
         #hero #h1hero h1 {
           font-size: 30px; } }
+      @media (min-width: 1125px) {
+        #hero #h1hero h1 {
+          font-size: 35px; } }
 
 #footpath h1 {
   font-size: 21px;
@@ -458,6 +464,9 @@ footer {
         flex-direction: row;
         padding: 0 35px;
         margin-bottom: 30px; } }
+    @media (min-width: 1125px) {
+      #footpath .footpathgridparent .footpathimages {
+        height: 180px; } }
   #footpath .footpathgridparent .footpathp {
     grid-column: 2/3; }
 
@@ -574,14 +583,14 @@ footer {
   display: grid;
   grid-template-rows: repeat(7, 121px);
   grid-template-columns: repeat(2, 1fr);
-  grid-row-gap: 30px;
+  grid-row-gap: 10px;
   grid-column-gap: 10px; }
   @media (min-width: 500px) {
     #gallery ul {
       display: grid;
       grid-template-rows: repeat(7, 242px);
       grid-template-columns: repeat(2, 1fr);
-      grid-row-gap: 30px;
+      grid-row-gap: 10px;
       grid-column-gap: 10px;
       width: 100%; } }
   @media (min-width: 710px) {
@@ -589,7 +598,7 @@ footer {
       display: grid;
       grid-template-rows: repeat(4, 363px);
       grid-template-columns: repeat(2, 1fr);
-      grid-row-gap: 30px;
+      grid-row-gap: 10px;
       grid-column-gap: 10px;
       width: 100%; } }
   @media (min-width: 960px) {
@@ -597,7 +606,15 @@ footer {
       display: grid;
       grid-template-rows: repeat(3, 363px);
       grid-template-columns: repeat(3, 1fr);
-      grid-row-gap: 30px;
+      grid-row-gap: 10px;
+      grid-column-gap: 10px;
+      width: 100%; } }
+  @media (min-width: 1125px) {
+    #gallery ul {
+      display: grid;
+      grid-template-rows: repeat(4, 363px);
+      grid-template-columns: repeat(3, 1fr);
+      grid-row-gap: 10px;
       grid-column-gap: 10px;
       width: 100%; } }
   #gallery ul li {
@@ -650,7 +667,7 @@ footer {
         grid-row: span 2;
         grid-column: span 2;
         background-image: url("../img/gallery/gall1.jpg");
-        background-position: -100px; }
+        background-position: -25px; }
       #gallery ul li:nth-child(2) {
         grid-row: span 1;
         grid-column: span 1;
@@ -662,11 +679,37 @@ footer {
         background-image: url("../img/gallery/gall3.jpg"); }
       #gallery ul li:nth-child(4) {
         grid-row: span 1;
-        grid-column: span 1.5;
+        grid-column: span 1;
         background-image: url("../img/gallery/gall4.jpg"); }
       #gallery ul li:nth-child(5) {
         grid-row: span 1;
         grid-column: span 1;
+        background-image: url("../img/gallery/gall5.jpg"); }
+      #gallery ul li:nth-child(6) {
+        grid-row: span 1;
+        grid-column: span 1;
+        background-image: url("../img/gallery/gall6.jpg"); } }
+    @media (min-width: 1125px) {
+      #gallery ul li:nth-child(1) {
+        grid-row: span 2;
+        grid-column: span 2;
+        background-image: url("../img/gallery/gall1.jpg");
+        background-position: -25px; }
+      #gallery ul li:nth-child(2) {
+        grid-row: span 1;
+        grid-column: span 1;
+        background-image: url("../img/gallery/gall2.jpg"); }
+      #gallery ul li:nth-child(3) {
+        grid-row: span 1;
+        grid-column: span 1;
+        background-image: url("../img/gallery/gall3.jpg"); }
+      #gallery ul li:nth-child(4) {
+        grid-row: span 1;
+        grid-column: span 1;
+        background-image: url("../img/gallery/gall4.jpg"); }
+      #gallery ul li:nth-child(5) {
+        grid-row: span 2;
+        grid-column: span 2;
         background-image: url("../img/gallery/gall5.jpg"); }
       #gallery ul li:nth-child(6) {
         grid-row: span 1;
@@ -685,10 +728,8 @@ footer {
     color: #fff; }
   #signup input {
     margin-bottom: 15px; }
-    @media (min-width: 960px) {
-      #signup input ul li {
-        display: grid;
-        grid-template-rows: repeat(1, 242px);
-        grid-template-columns: repeat(3, 1fr);
-        grid-column-gap: 10px;
-        width: 100%; } }
+  #signup ul {
+    width: 100%;
+    grid-column-gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    display: grid; }
