--- a/Kyle_Web2/scss/sections/_signup.scss
+++ b/Kyle_Web2/scss/sections/_signup.scss
@@ -15,20 +15,13 @@
 
   input{
     margin-bottom: 15px;
-
-    ul{
-
-li{
-  @include lg{
-    display: grid;
-  grid-template-rows: repeat(1, 242px);
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 10px;
-  width: 100%;
-  }
-}
-
-    }
   }
 
+  ul {
+    width:100%;
+    grid-column-gap:10px;
+    grid-template-columns:repeat(3, 1fr);
+    // grid-template-rows:repeat(1, 242px);
+    display:grid;
+  }
 }
