--- a/Kyle_Web2/scss/components/_navigation.scss
+++ b/Kyle_Web2/scss/components/_navigation.scss
@@ -1,3 +1,20 @@
 /* =============
     Navigation
 ============= */
+ul{
+
+li{
+
+  @include lg{
+    border-bottom: none;
+  }
+}
+
+
+  @include lg{
+    display: flex;
+    li{
+      padding-right: 11px;
+    }
+  }
+}
