--- a/Kyle_Web2/scss/sections/_hero.scss
+++ b/Kyle_Web2/scss/sections/_hero.scss
@@ -9,7 +9,7 @@
     margin-bottom: 60px;
     justify-content: flex-end;
     align-content: flex-end;
-    margin-top: 30px;
+    // margin-top: 30px;
 
     @include sm{
       height: 350px;
