--- a/Kyle_Web2/css/styles.css
+++ b/Kyle_Web2/css/styles.css
@@ -347,6 +347,9 @@ body h5 {
 /* =============
     Buttons
 ============= */
+button {
+  outline: none; }
+
 /* =============
     Forms
 ============= */
@@ -368,73 +371,84 @@ input:focus {
 /* =============
     Navigation
 ============= */
-@media (min-width: 960px) {
-  ul li {
-    border-bottom: none; } }
+/* =============
+    Navigation
+============= */
+a:hover,
+a:link {
+  text-decoration: none;
+  transition: 0.25s; }
 
-@media (min-width: 960px) {
-  ul {
-    display: flex; }
-    ul li {
-      padding-right: 11px; } }
+#off-canvas-container {
+  /* -------------
+        Here are the properties you can changes for the off-canvas navigation-slide
+    ------------- */
+  position: fixed;
+  background-color: #236D37;
+  width: 225px;
+  height: 100vh;
+  /* close btn */
+  /* close btn */ }
+  #off-canvas-container button {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.5625rem;
+    margin-bottom: 20px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: flex-start;
+    transition: 0.25s;
+    margin-left: auto; }
+  #off-canvas-container button:hover {
+    color: #fff; }
+  #off-canvas-container ul {
+    margin-top: 15px;
+    font-family: 'Open Sans', sans-serif; }
+    #off-canvas-container ul li {
+      border-bottom: 1px solid #fff;
+      text-align: left; }
+      #off-canvas-container ul li a:link,
+      #off-canvas-container ul li a:visited {
+        color: #fff;
+        padding: 5%;
+        width: 95%;
+        display: inline-block; }
+      #off-canvas-container ul li a:active,
+      #off-canvas-container ul li a:hover {
+        color: #fff;
+        background-color: #31578B; }
+
+header {
+  background-color: #31578B;
+  height: 50px; }
+  header section {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; }
+
+#burger-icon {
+  color: #fff;
+  background-color: #31578B;
+  display: flex;
+  justify-content: flex-start;
+  text-align: right;
+  font-size: 1.125rem;
+  outline: none;
+  border: none;
+  padding: 6px 8px;
+  z-index: 1; }
+
+#burger-icon:hover {
+  background-color: transparent;
+  color: #236D37; }
 
 /* =============
     Header
 ============= */
-header {
-  display: grid;
-  grid-template-columns: 88% auto;
-  padding: 10px;
-  grid-template-areas: "logo burger" "nav nav";
-  position: fixed;
-  width: 100%;
-  background-color: #31578B;
-  top: 0; }
-  @media (min-width: 960px) {
-    header {
-      display: grid;
-      grid-template-columns: 60% auto;
-      padding: 10px;
-      grid-template-areas: "logo nav"; } }
-  header section:nth-child(2) {
-    grid-area: burger;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 10px;
-    align-items: center; }
-  header a {
-    color: #fff;
-    font-size: 1rem;
-    font-family: 'Open Sans', sans-serif;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 20px;
-    margin-bottom: 15px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    border-bottom: 2px solid #fff; }
-    @media (min-width: 960px) {
-      header a {
-        display: flex !important;
-        justify-content: space-between;
-        border-bottom: none; } }
-  header button {
-    text-align: right;
-    color: #fff;
-    font-size: 1.25rem;
-    background-color: #31578B;
-    border: none;
-    outline: none; }
-    @media (min-width: 960px) {
-      header button {
-        display: none; } }
-  header nav {
-    grid-area: nav; }
-    @media (min-width: 960px) {
-      header nav {
-        border-bottom: none;
-        display: inline-block !important; } }
-
 /* =============
     Footer
 ============= */
@@ -455,8 +469,7 @@ footer {
   background-position: -75px 0;
   margin-bottom: 60px;
   justify-content: flex-end;
-  align-content: flex-end;
-  margin-top: 30px; }
+  align-content: flex-end; }
   @media (min-width: 500px) {
     #hero {
       height: 350px; } }
