--- a/Kyle_Web2/scss/components/_navigation.scss
+++ b/Kyle_Web2/scss/components/_navigation.scss
@@ -1,20 +1,154 @@
 /* =============
     Navigation
 ============= */
-ul{
+// ul{
+//
+// li{
+//
+//   @include lg{
+//     border-bottom: none;
+//   }
+// }
+//
+//
+//   @include lg{
+//     display: flex;
+//     li{
+//       padding-right: 11px;
+//     }
+//   }
+// }
 
-li{
+// ul{
+//   background-color: $green;
+//   margin-top: 22px;
+//   li{
+//     padding-bottom: 15px;
+//     padding-left: 10px;
+//     li:(1){
+//       padding-top: 10px;
+//     }
+//     a{
+//       color: $white;
+//       font-family: 'Open Sans', sans-serif;
+//     }
+//   }
+// }
 
-  @include lg{
-    border-bottom: none;
-  }
+/* =============
+    Navigation
+============= */
+
+
+a:hover,
+a:link {
+    text-decoration: none;
+    transition: 0.25s;
 }
 
 
-  @include lg{
-    display: flex;
-    li{
-      padding-right: 11px;
+#off-canvas-container{
+    /* -------------
+        Here are the properties you can changes for the off-canvas navigation-slide
+    ------------- */
+    position: fixed;
+    background-color: $green;
+    // grid-template-columns: 10px auto 10px;
+    // padding-top: 20px;
+
+    // width of the off canvas navigation
+    width: 225px;
+    height: 100vh;
+
+
+    /* close btn */
+    button {
+        background-color: transparent;
+        border: none;
+        color: $white;
+        cursor: pointer;
+        font-size: rem-calc(25);
+        margin-bottom: 20px;
+        padding-top: 10px;
+        // text-align: right;
+        display: flex;
+        justify-content: flex-start;
+        transition: 0.25s;
+        margin-left: auto;
+        // width: 100%;
     }
+
+
+
+
+
+
+    /* close btn */
+    button:hover {
+        color: $white;
+    }
+
+    ul{
+    margin-top: 15px;
+    font-family: 'Open Sans', sans-serif;
+
+        li {
+          border-bottom: 1px solid $white;
+          text-align: left;
+
+
+
+            a:link,
+            a:visited {
+                color: $white;
+                padding: 5%;
+                width: 95%;
+                display: inline-block;
+            }
+
+            a:active,
+            a:hover {
+                color: $white;
+                background-color: $blue;
+            }
+        }
+
+    }
+}
+
+header{
+  background-color: $blue;
+  height: 50px;
+  section{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
   }
+
+}
+
+#burger-icon {
+  color: $white;
+    background-color: $blue;
+    display: flex;
+    justify-content: flex-start;
+    text-align: right;
+
+    font-size: rem-calc(18);
+    outline: none;
+    border: none;
+    padding: 6px 8px;
+
+
+    z-index: 1;
+
+}
+
+#burger-icon:hover {
+    background-color: transparent;
+    color: $green;
+
 }
