--- a/Kyle_Web2/scss/layout/_header.scss
+++ b/Kyle_Web2/scss/layout/_header.scss
@@ -11,8 +11,10 @@ header{
 // margin-top: 10px;
 // }
 
+
+
 display: grid;
-    grid-template-columns: 88% auto;
+    grid-template-columns: 70% auto;
     padding: 10px;
     grid-template-areas:
     "logo burger"
@@ -35,6 +37,7 @@ display: grid;
 grid-area: burger;
 display: flex;
 justify-content: flex-end;
+margin-right: 15px;
 padding-right: 10px;
 align-items: center;
 }
@@ -62,13 +65,13 @@ align-items: center;
     }
 
     button{
-    text-align: right;
-    color: $white;
-    font-size: rem-calc(20);
-    background-color: $blue;
-    border: none;
-    outline: none;
-
+  //   text-align: right;
+  //   color: $white;
+  //   font-size: rem-calc(20);
+  //   background-color: $blue;
+  //   border: none;
+  //   outline: none;
+  //
     @include lg{
       display: none;
     }
@@ -91,5 +94,39 @@ align-items: center;
 
   }
 
+}
+
+/* =============
+    Burger
+============= */
+#burger-container {
+    background-color: $blue;
+    border: none;
+    cursor: pointer;
+    height: 20px;
+    outline: none;
+    position: relative;
+    width: 30px;
+
+    div {
+        background-color: $black;
+        height: 3px;
+        margin-bottom: 20px;
+        position: absolute;
+        width: 100%;
+    }
+
+    div:nth-child(1) {
+        top: 0;
+    }
+
+    div:nth-child(2) {
+        top: 10px;
+    }
+
+    div:nth-child(3) {
+        margin: 0;
+        top: 20px;
+    }
 }
 }
